# reddit-analysis

./: .gitignore  CLAUDE.md  README.md  SKILL.md  agent.yaml  entrypoint.sh  install.sh  pyproject.toml  run.py  setup.py
agents/: analyst.md  arch_reviewer.md  architect.md  code_reviewer.md  coder.md  qa.md  scraper.md
config/: corpus_subreddits.txt  search_config.json  search_config_expanded.json
data/raw/: reddit_disruption_progress.json
data/reports/: disruption_agent_selection.md
docs/: architecture.md
docs/superpowers/plans/: 2026-03-19-reddit-ai-agent-research.md  2026-03-19-xiaohongshu-pipeline.md  2026-04-08-corpus-architecture.md
docs/superpowers/specs/: 2026-03-19-reddit-ai-agent-research-design.md  2026-03-19-xiaohongshu-agent-selection-design.md  2026-04-08-corpus-architecture-design.md
prompts/: generate_report.md  plan_task.md
scripts/: analyze.py  analyze_proxy_ordering.py  analyze_reddit_services.py  batch_save.py  check_env.py  corpus_build.py  corpus_update.py  deep_analyze_proxy_ordering.py  disruption_analysis.py  md2pdf.py  orchestrator.py  retry_failed.py  save_posts.py  scrape_all.py  scrape_disruption.py  scrape_proxy_ordering.py  scrape_reddit.py  scrape_reddit_needs.py  scrape_reddit_services.py  search_corpus.py  update_progress.py
scripts/xiaohongshu/: config.py  stage1_merge.py  stage2_filter.py  stage3_label.py  stage3b_label_ambiguous.py  stage4_analyze.py
