[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-research"
version = "1.0.0"
description = "Reddit 市场调研自动化 CLI — 从用户需求到 PDF 报告的全流程 Agent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "markdown2>=2.4",
    "weasyprint>=60.0",
]

[project.scripts]
reddit-research = "run:main"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.setuptools.package-data]
"*" = [
    "config/*.txt",
    "config/*.json",
    "prompts/*.md",
    "agents/*.md",
]
